@@ -1,9 +1,9 @@
-/*	$NetBSD: bozohttpd.h,v 1.20.2.2 2016/04/15 19:36:08 snj Exp $	*/
+/*	$NetBSD: bozohttpd.h,v 1.20.2.3 2017/03/07 07:25:18 snj Exp $	*/
 
 /*	$eterna: bozohttpd.h,v 1.39 2011/11/18 09:21:15 mrg Exp $	*/
 
 /*
- * Copyright (c) 1997-2015 Matthew R. Green
+ * Copyright (c) 1997-2017 Matthew R. Green
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -366,5 +366,7 @@ bozoheaders_t *addmerge_replheader(bozo_httpreq_t *, const char *,
 /* variables */
 int bozo_set_pref(bozohttpd_t *, bozoprefs_t *, const char *, const char *);
 char *bozo_get_pref(bozoprefs_t *, const char *);
+
+int bozo_get_version(char */*buf*/, size_t /*size*/);
 
 #endif	/* BOZOHTTOPD_H_ */
